refactor: Change expression recommended by IntelliJ